refactor(CartItem): toList() 함수 사용